# pscom

./: Makefile.in  configure  configure.ac
doc/: Makefile.in
include/: Makefile.in  pscom.h  psport4.h
lib/: Makefile.am  Makefile.in
lib/p4tcp/: Makefile.in
lib/pscom/: Makefile.am  Makefile.in  pscom.c  pscom_con.c  pscom_env.h  pscom_migrate.c  pscom_migrate.h  pscom_plugin.c  pscom_precon.c  pscom_priv.h  pscom_shm.c  pscom_str_util.c  psivshmem_malloc.c  psshmalloc.c
lib/pscom4dapl/: Makefile.in
lib/pscom4elan/: Makefile.in
lib/pscom4extoll/: Makefile.in
lib/pscom4gm/: Makefile.in
lib/pscom4ivshmem/: Makefile.am  Makefile.in  metadata.h  metastruct.h  pscom_ivshmem.c  pscom_ivshmem.h  psivshmem.c  psivshmem.h  psivshmem_malloc.c  psivshmem_malloc.h  psivshmem_mregion_cache.c
lib/pscom4mxm/: Makefile.in
lib/pscom4ofed/: Makefile.in
lib/pscom4openib/: Makefile.in
lib/pscom4psm/: Makefile.in
lib/pscom4ucp/: Makefile.in
lib/pscom4velo/: Makefile.in
lib/psmalloc/: Makefile.am  Makefile.in
lib/psmalloc4ivshmem/: Makefile.in  psivshmem_malloc.c.old
lib/psmalloc_ivshmem/: Makefile.am  Makefile.in  Makefile.old  psmalloc_interVM.c
lib/psport4/: Makefile.am  Makefile.in  psport4b.c  psport4switch.c  psport_priv.h
lib/psport4/ivshmem/: psport_ivshmem.c  psport_ivshmem.h
m4/: libtool.m4
scripts/: Makefile.in  config.sub
